<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:padding="10dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="15dp"
            android:textColor="@color/Black"
            android:text="@string/begin_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/edDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/Black"
            android:textColor="@color/Black"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txtSort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="15dp"
            android:textColor="@color/Black"
            android:text="@string/sort"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNewDesk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:textColor="@color/Black"
            android:text="@string/new_desk"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckArts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/arts"
                android:buttonTint="@color/Black"
                android:textColor="@color/Black"/>
            <CheckBox
                android:id="@+id/ckFashionStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/fashion_style"
                android:layout_weight="1"
                android:buttonTint="@color/Black"
                android:textColor="@color/Black"/>
            <CheckBox
                android:id="@+id/ckSport"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sport"
                android:buttonTint="@color/Black"
                android:textColor="@color/Black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/OK"
            android:textColor="@color/Black" />
    </LinearLayout>

</LinearLayout>